2008-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : plot edge labels
	at one third of the edge to allow better plotting of mutual edges

2008-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.maxflow, graph.mincut) : allow
	capacity to be NULL
	* interfaces/R/src/rinterface.c.in (R_igraph_maxflow)
	(R_igraph_mincut, R_igraph_mincut_value, R_igraph_st_mincut_value) : 
	updated

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) : 
	rewritten, better if 'weighted'!=NULL, 'diag' argument added

	* interfaces/R/igraph/R/plot.R (plot.igraph) 
	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 
	simple vertex shape support added

2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai) 
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_kamada_kawai)
	(R_igraph_layout_kamada_kawai_3d, R_igraph_layout_fruchterman_reingold_grid)
	(R_igraph_layout_fruchterman_reingold) : initial position support

	* interfaces/R/igraph/R/layout.R (layout.graphopt) 
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_graphopt) : added

	* interfaces/R/igraph/R/plot.R (plot.igraph)
	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 'frame' added

	* interfaces/R/igraph/R/centrality.R (arpack) : added
	* interfaces/R/src/rinterface.c.in (R_igraph_arpack) : added

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community.step) :
	updated
	* interfaces/R/src/rinterface.c.in 
	(R_igraph_community_leading_eigenvector_step) : removed, generated by 
	stimulus

2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) 
	* interfaces/R/src/rinterface.c.in (R_igraph_community_leading_eigenvector)
	: removed, generated by stimulus

2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>
